k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  server-deployment
  namespace: default
  labels:
    app:  server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app:  server
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  server
        image:  gg-server:latest
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
  - name: server-service
    protocol: TCP
    port: 4000
    targetPort: 4000
